edited css for img

--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image">
-								<img src="images/friendly.gif" alt="" data-position="top center" />
+							<a href="https://friend-ly.onrender.com/" class="image">
+								<img src="images/friendly.gif" alt="" 
+								/>
 							</a>
 							<div class="content">
 								<div class="inner">
@@ -63,7 +64,6 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/greenfin.gif" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Greenfin</h2>
@@ -73,10 +73,11 @@
 									</ul>
 								</div>
 							</div>
+							<a href="https://greenfin.onrender.com/" class="image"><img src="images/greenfin.gif" alt="" data-position="top center" /></a>
 						</section>
 						
 						<section>
-							<a href="#" class="image"><img src="images/lifeexpectancy.gif" alt="" data-position="top center" /></a>
+							<a href="https://iamxiwang.github.io/life_expectancy/"  class="image"><img src="images/lifeexpectancy.gif" alt=""  /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Life Expectancy</h2>
