added info to the welcome page

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 						<div class="inner">
 							<h1>Hi! I'm Xi(Vivian) Wang </h1>
 							<p>FULL STACK SOFTWARE ENGINEER
+								<br />A highly motivated and results-driven software developer.
+							</p>
 							
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
