added a paragraph in contact section

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>My Skills</h2>
-							<p>I have lots of experiences with a range of technologies, including React.js, Redux, TypeScript, JavaScript (ES6+), HTML5, CSS3, Ruby on Rails, Ruby, Express, SQL, PostgreSQL, MongoDB, Python. My objective is to broaden my skill set, and I aim to contribute to open source by writing tests using Go.</p>
+							<p>A highly motivated and results-driven software developer with 2+ years of experience in building web applications utilizing modern front-end technologies such as React, Redux, and JavaScript. Possess a strong foundation in web development principles and a passion for creating intuitive and user-friendly applications.</p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
@@ -139,7 +139,7 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<p>Feel free to reach out to me through the following methods </p>
+							<p>Feel free to reach out to me with any questions or opportunities. I'm always eager to connect and collaborate with like-minded individuals. If you prefer, you can also connect with me on LinkedIn or follow my work on Github.</p>
 							<div class="split style1">
 						
 								<section>
