added resume in contact

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Xi(Vivian) Wang</title>
+		<title>Xi_(Vivian) Wang</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -36,9 +36,9 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Hi! I'm Xi(Vivian) Wang </h1>
-							<p>FULL STACK SOFTWARE ENGINEER
-								<br />A highly motivated and results-driven software developer.
+							<h1>Hi! I'm Xi_(Vivian)Wang </h1>
+							<p>A FULL STACK SOFTWARE ENGINEER
+								<br />With unique background in executive assistance and e-commerce. Originally from Northern China, I have spent the past 6 years working in the media and e-commerce industries, where I gained valuable experience in team working, data analysis, and customer service. My ability to speak both Mandarin and English fluently has been an asset in my professional endeavors.
 							</p>
 							
 							<ul class="actions">
@@ -150,6 +150,11 @@
 												<li ><a href="https://github.com/iamxiwang" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 												<li><a href="https://www.linkedin.com/in/xi-wang-7b00bb25a/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
+										</li>
+										<li >
+											<h3>Resume </h3>
+												<a href="./images/Resume.pdf"><i class="fa-solid fa-file"></i></a>
+											
 										</li>
 										<li>
 											<h3>Email</h3>
