edited welcome page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<div class="inner">
 							<h1>Hi! I'm Xi_(Vivian)Wang </h1>
 							<p>A FULL STACK SOFTWARE ENGINEER
-								<br />With unique background in executive assistance and e-commerce. Originally from Northern China, I have spent the past 6 years working in the media and e-commerce industries, where I gained valuable experience in team working, data analysis, and customer service. My ability to speak both Mandarin and English fluently has been an asset in my professional endeavors.
+								<br />With a unique background in executive assistance. Originally from Northern China, I bring valuable experience from 6 years working in the media and e-commerce industries, including team collaboration, data analysis, and customer service. With fluency in both Mandarin and English, I've been able to excel in my professional endeavors.
 							</p>
 							
 							<ul class="actions">
