add 3d photo for all project

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
     <div class='container-fluid'>
       <div class='row'>
         <div class='col-md-6 offset-md-3'>
-          <sup>Meet Morgan J Lopes</sup>
+          <sup>Meet Xi Vivian Wang</sup>
           <h1>Combining <span class='marker-highlight'>technology</span> and creative <span class='marker-highlight'>problem-solving</span> to positively impact others.</h1>
           <p class='lead mb-5'>I use technology to connect people and help others reach their full potential.</p>
 
-          <a target='_blank' href='https://www.linkedin.com/in/morganjlopes/' class='btn btn-primary'><i class="bi-linkedin"></i> Connect on Linkedin</a>
+          <a target='_blank' href='https://www.linkedin.com/in/xi-vivian-wang-7b00bb25a' class='btn btn-primary'><i class="bi-linkedin"></i> Connect on Linkedin</a>
           <!-- <a  target='_blank' href='https://calendly.com/morganjlopes/call' class='btn btn-primary'><i class="bi-calendar-event"></i> Schedule a Call</a> -->
           <!-- <a href='#' class='btn btn-primary'><i class="bi-download"></i> Download Resume</a> -->
           <!-- <a href='mailto:' class='btn btn-primary'><i class="bi-envelope"></i> Send Email</a> -->
@@ -86,58 +86,59 @@
       <div class='row mb-5'>
         <div class='col-sm-4'>
           <div class='card h-100'>
-            <div class='background-image' style='background-image: url(img/friendly.gif)'>
+            <div class='background-image' style='background-image: url(img/Friendly3.png)'>
               <img src='img/spacer-portrait.png'>
             </div>
             <div class='card-body'>
 
-              <h3>END IT Movement</h3>
+              <h3>Friend.ly</h3>
               <p class='mb-3'>For 6 years, the team and I worked with END IT Movement to produce the website for their annual 'Shine a Light on Slavery' Day. The site handled 100,000+ visitors w/in 24 hours.</p>
               
             </div>
             <div class='card-footer'>
               <a href='#' class='btn btn-sm btn-light'><i class="bi-github"></i> Code</a>
-              <a href='#' class='btn btn-sm btn-light'><i class="bi-power"></i> Demo</a>
-              <a href='#' class='btn btn-sm btn-primary float-end'><i class="bi-play-fill"></i> Watch</a>
+              <!-- <a href='#' class='btn btn-sm btn-light'><i class="bi-power"></i> Demo</a> -->
+              <a href='https://friend-ly.onrender.com/login'target="_blank" class='btn btn-sm btn-primary float-end'><i class="bi-play-fill"></i> Demo</a>
             </div>
           </div>
         </div>
 
         <div class='col-sm-4'>
           <div class='card h-100'>
-            <div class='background-image' style='background-image: url(img/portfolio-aggregate-law.png)'>
+            <div class='background-image' style='background-image: url(img/greenfin.png)'>
               <img src='img/spacer-portrait.png'>
             </div>
             <div class='card-body'>
 
-              <h3>AggregateLaw</h3>
+              <h3>Greenfin</h3>
               <p class='mb-3'>A marketplace for connecting lawfirms with projects attorneys, we worked on the MVP and Version 1 of their product from strategy, through design, to development.</p>
               
 
             </div>
             <div class='card-footer'>
-              <a href='#' class='btn btn-sm btn-light'><i class="bi-github"></i> Code</a>
-              <a href='#' class='btn btn-sm btn-light'><i class="bi-power"></i> Demo</a>
-              <a href='#' class='btn btn-sm btn-primary float-end'><i class="bi-play-fill"></i> Watch</a>
+              <a href='https://github.com/iamxiwang/greenfin' class='btn btn-sm btn-light'><i class="bi-github"></i> Code</a>
+              <!-- <a href='#' class='btn btn-sm btn-light'><i class="bi-power"></i> Demo</a> -->
+              <a href='https://greenfin.onrender.com/' target="_blank" class='btn btn-sm btn-primary float-end'><i class="bi-play-fill"></i> Demo</a>
             </div>
           </div>
         </div>
 
         <div class='col-sm-4'>
           <div class='card h-100'>
-            <div class='background-image' style='background-image: url(img/portfolio-growing-leaders.png)'>
+            <div class='background-image' style='background-image: url(img/life1.png)'>
               <img src='img/spacer-portrait.png'>
             </div>
             <div class='card-body'>
 
-              <h3>Habitudes Online</h3>
+              <h3>Life Expectancy</h3>
               <p class='mb-3'>We brought Growing Leaders into the digital age by cocreating their online content library. Over 6+ years, we've launched multiple products with thousands of active users.</p>
 
             </div>
             <div class='card-footer'>
-              <a href='#' class='btn btn-sm btn-light'><i class="bi-github"></i> Code</a>
-              <a href='#' class='btn btn-sm btn-light'><i class="bi-power"></i> Demo</a>
-              <a href='#' class='btn btn-sm btn-primary float-end'><i class="bi-play-fill"></i> Watch</a>
+              <a href='https://github.com/iamxiwang/life_expectancy' class='btn btn-sm btn-light'><i class="bi-github"></i> Code</a>
+              <!-- <a href='#' class='btn btn-sm btn-light'><i class="bi-power"></i> Demo</a> -->
+              <a href='https://iamxiwang.com/life_expectancy/' target="_blank"
+              " class='btn btn-sm btn-primary float-end'><i class="bi-play-fill"></i> Demo</a>
             </div>
           </div>
         </div>
@@ -219,25 +220,25 @@
   <section id='about' class='p-section'>
     <div class='container container-lg'>
       <sup>About</sup>
-      <h2 class='mb-5 underline'>I am Morgan Lopes</h2>
+      <h2 class='mb-5 underline'>I am Xi Vivian Wang</h2>
 
       <div class='row flex-row'>
         <div class='col-sm-4'>
           <div class='p-3 sticky-top' style='top: 85px;'>
-            <img src="img/headshot.jpg" class='circle mb-3'>
+            <img src="img/headshot.jpeg" class='circle mb-3'>
 
             <ul class='list-inline mb-0 text-center'>
               <li class='list-inline-item h4 mb-0 me-3'>
-                <a href='https://www.linkedin.com/in/morganjlopes/' target='_blank' class='text-light'>
+                <a href='https://www.linkedin.com/in/xi-vivian-wang-7b00bb25a' target='_blank' class='text-light'>
                   <i class="bi-linkedin"></i>
                 </a>
               </li>
               <li class='list-inline-item h4 mb-0 me-3'>
-                <a href='https://github.com/morganjlopes' target='_blank' class='text-light'>
+                <a href='https://github.com/iamxiwang' target='_blank' class='text-light'>
                   <i class="bi-github"></i>
                 </a>
               </li>
-              <li class='list-inline-item h4 mb-0 me-3'>
+              <!-- <li class='list-inline-item h4 mb-0 me-3'>
                 <a href='https://twitter.com/MorganJLopes' target='_blank' class='text-light'>
                   <i class="bi-twitter"></i>
                 </a>
@@ -246,9 +247,9 @@
                 <a href='https://www.instagram.com/morganjlopes/' target='_blank' class='text-light'>
                   <i class="bi-instagram"></i>
                 </a>
-              </li>
+              </li> -->
               <li class='list-inline-item h4 mb-0 me-3'>
-                <a href='https://www.morganjlopes.com/' target='_blank' class='text-light'>
+                <a href='https://www.iamxiwang.com/' target='_blank' class='text-light'>
                   <i class="bi-rss"></i>
                 </a>
               </li>
@@ -258,7 +259,7 @@
         <div class='col-sm-8'>
           <blockquote>Actively writing code and building high-functioning teams.</blockquote>
 
-          <img src="img/github-activity.png" class='mb-3'>
+          <img src="img/github_activities.png" class='mb-3'>
 
           <p class='lead'>Thought-filled software engineer and entrepreneur who understands that deliberate, <span class='marker-highlight'>consistent progress</span> over time is life's greatest growth strategy.</p>
           <p class='lead'>Regardless of his job titles, Morgan sees leadership as a choice, not a rank. He strives to make that choice daily and challenges others to do the same. Currently serving as CTO at <span class='marker-highlight'>Fast Company's World Most Innovative Company</span> (x4), consulting startup founders, and Launching Book ("Code School") to help more people transition into tech.</p>
@@ -273,7 +274,7 @@
           </ul>
 
           <div class='mt-5'>
-            <a target='_blank' href='https://www.linkedin.com/in/morganjlopes/' class='btn btn-primary'><i class="bi-linkedin"></i> Connect on Linkedin</a>
+            <a target='_blank' href='https://www.linkedin.com/in/xi-vivian-wang-7b00bb25a/' class='btn btn-primary'><i class="bi-linkedin"></i> Connect on Linkedin</a>
             <!-- <a  target='_blank' href='https://calendly.com/morganjlopes/call' class='btn btn-primary'><i class="bi-calendar-event"></i> Schedule a Call</a> -->
             <!-- <a href='#' class='btn btn-primary'><i class="bi-download"></i> Download Resume</a> -->
             <!-- <a href='mailto:' class='btn btn-primary'><i class="bi-envelope"></i> Send Email</a> -->
@@ -345,13 +346,13 @@
             <h3><i class="bi-pen me-2"></i> Popular Writings</h3>
             <ul>
               <li>
-                <a target='_blank' href='https://www.morganjlopes.com/annual-reflection-framework/' class='text-white'>Annual Reflection Framework</a>
+                <a target='_blank' href='https://www.iamxiwang.com/annual-reflection-framework/' class='text-white'>Annual Reflection Framework</a>
               </li>
               <li>
                 <a target='_blank' href='https://www.morganjlopes.com/bringing-humanity-back-to-email/' class='text-white'>Bringing Humanity Back to Email</a>
               </li>
               <li>
-                <a target='_blank' href='https://www.morganjlopes.com/work-life-harmony/' class='text-white'>Work Life Harmony</a>
+                <a target='_blank' href='https://www.iamxiwang.com/work-life-harmony/' class='text-white'>Work Life Harmony</a>
               </li>
               <li>
                 <a target='_blank' href='https://medium.com/tenrocket/web-and-mobile-app-sitemap-643b60b0343e' class='text-white'>Web and Mobile App Sitemap</a>
@@ -419,13 +420,13 @@
 
       <ul class='list-unstyled lead'>
         <li>Coffee (The bougier the better)</li>
-        <li>Running (I'm training for an Ultra)</li>
+        <li>Dancing (Let's show the elegancy)</li>
         <li>Reading (Fiction, nonfiction... all of it)</li>
         <li>Moonlanding</li>
       </ul>
 
       <div class='mt-5'>
-        <a target='_blank' href='https://www.linkedin.com/in/morganjlopes/' class='btn btn-primary'><i class="bi-linkedin"></i> Connect on Linkedin</a>
+        <a target='_blank' href='https://www.linkedin.com/in/xi-vivian-wang-7b00bb25a/' class='btn btn-primary'><i class="bi-linkedin"></i> Connect on Linkedin</a>
         <!-- <a  target='_blank' href='https://calendly.com/morganjlopes/call' class='btn btn-primary'><i class="bi-calendar-event"></i> Schedule a Call</a> -->
         <!-- <a href='#' class='btn btn-primary'><i class="bi-download"></i> Download Resume</a> -->
         <!-- <a href='mailto:' class='btn btn-primary'><i class="bi-envelope"></i> Send Email</a> -->
@@ -436,25 +437,25 @@
   <footer class='bg-black p-5 text-white'>
     <div class='container'>
       <div class='row'>
-        <div class='col-sm-6'>
+        <!-- <div class='col-sm-6'>
           <p>
             Built on <a href='https://getbootstrap.com/' target='_blank' class='text-white'>Bootstrap</a> and Developed by <a href='https://www.morganjlopes.com/' target='_blank' class='text-white'>Morgan J Lopes</a>
           </p>
-        </div>
+        </div> -->
 
         <div class='col-sm-6'>
           <ul class='list-inline float-end'>
             <li class='list-inline-item h4 mb-0 me-3'>
-              <a href='https://www.linkedin.com/in/morganjlopes/' target='_blank' class='text-light'>
+              <a href='https://www.linkedin.com/in/xi-vivian-wang-7b00bb25a/' target='_blank' class='text-light'>
                 <i class="bi-linkedin"></i>
               </a>
             </li>
             <li class='list-inline-item h4 mb-0 me-3'>
-              <a href='https://github.com/morganjlopes' target='_blank' class='text-light'>
+              <a href='https://github.com/iamxiwang' target='_blank' class='text-light'>
                 <i class="bi-github"></i>
               </a>
             </li>
-            <li class='list-inline-item h4 mb-0 me-3'>
+            <!-- <li class='list-inline-item h4 mb-0 me-3'>
               <a href='https://twitter.com/MorganJLopes' target='_blank' class='text-light'>
                 <i class="bi-twitter"></i>
               </a>
@@ -463,19 +464,19 @@
               <a href='https://www.instagram.com/morganjlopes/' target='_blank' class='text-light'>
                 <i class="bi-instagram"></i>
               </a>
-            </li>
-            <li class='list-inline-item h4 mb-0 me-3'>
+            </li> -->
+            <!-- <li class='list-inline-item h4 mb-0 me-3'>
               <a href='https://www.morganjlopes.com/' target='_blank' class='text-light'>
                 <i class="bi-rss"></i>
               </a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
     </div>
   </footer>
 
-  <div class="toast show position-fixed" role="alert" aria-live="assertive" aria-atomic="true">
+  <!-- <div class="toast show position-fixed" role="alert" aria-live="assertive" aria-atomic="true">
     <div class="toast-header">
       <strong class="me-auto">Pst, Checkout this Freebie!</strong>
       <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
@@ -485,7 +486,7 @@
 
       <a href='https://github.com/morganjlopes/portfolio-template' target='_blank' class='btn btn-outline-primary btn-sm'>Check it out!</a>
     </div>
-  </div>
+  </div> -->
 
   <svg xmlns="//www.w3.org/2000/svg" version="1.1" class="svg-filters" style="display:none;">
     <defs>
