--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#about">About</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="#testimonials">Testimonials</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" href="#contact">Contact</a>
           </li>
@@ -66,14 +66,14 @@
 
       <div class='row justify-content-center d-flex align-items-center'>
         <div class='col-2'>
-          <img src="img/logo-new-story.png" class='px-3'>
+          <img src="img/dangdang.png" class='px-3'>
         </div>
         <div class='col-2'>
-          <img src="img/logo-polar-notion.png" class='px-3'>
+          <img src="img/airmedia.png" class='px-3'>
         </div>
-        <div class='col-2'>
-          <img src="img/logo-tenrocket.png" class='px-3'>
-        </div>
+        <!-- <div class='col-2'>
+          <img src="img/nuskin.png" class='px-3'>
+        </div> -->
       </div>
     </div>
   </section>
@@ -92,7 +92,7 @@
             <div class='card-body'>
 
               <h3>Friend.ly</h3>
-              <p class='mb-3'>For 6 years, the team and I worked with END IT Movement to produce the website for their annual 'Shine a Light on Slavery' Day. The site handled 100,000+ visitors w/in 24 hours.</p>
+              <p class='mb-3'>A social media website for meeting new people based on user location and interest.</p>
               
             </div>
             <div class='card-footer'>
@@ -111,7 +111,7 @@
             <div class='card-body'>
 
               <h3>Greenfin</h3>
-              <p class='mb-3'>A marketplace for connecting lawfirms with projects attorneys, we worked on the MVP and Version 1 of their product from strategy, through design, to development.</p>
+              <p class='mb-3'>A single page Redfin.com clone where user can buy and sell their properties.</p>
               
 
             </div>
@@ -131,7 +131,7 @@
             <div class='card-body'>
 
               <h3>Life Expectancy</h3>
-              <p class='mb-3'>We brought Growing Leaders into the digital age by cocreating their online content library. Over 6+ years, we've launched multiple products with thousands of active users.</p>
+              <p class='mb-3'>A minimalist map to visualize countries' life expectancy at birth.</p>
 
             </div>
             <div class='card-footer'>
@@ -144,7 +144,7 @@
         </div>
       </div>
 
-      <h3 class='pt-3'>Other Clients and Past Projects</h3>
+      <!-- <h3 class='pt-3'>Other Clients and Past Projects</h3>
       <div class='row'>
         <div class='col-sm-5'>
           <p class='pb-3 lead'>These items are a collection of companies I've worked with, projects I've undertaken, and products I've helped launch. They include things like:</p>
@@ -156,8 +156,8 @@
             <li>Go to Market Strategy</li>
             <li>MVP Design and Implementation</li>
           </ul>
-        </div>
-        <div class='col-sm-7'>
+        </div> -->
+        <!-- <div class='col-sm-7'>
 
           <ul class='text-center list-inline w-md ms-auto me-auto'>
             <li class='list-inline-item'>
@@ -212,7 +212,7 @@
               <a href='https://passionconferences.com/' target='_blank' class='btn'>Passion Conference</a>
             </li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
@@ -268,8 +268,10 @@
 
           <ul class='lead'>
             <li><span class='marker-highlight'>Ruby on Rails</span></li>
+            <li><span class='marker-highlight'>React.js</span></li>
+            <li><span class='marker-highlight'>Python</span></li>
             <li>Github</li>
-            <li>Heroku</li>
+            <li>Render</li>
             <li>AWS</li>
           </ul>
 
@@ -283,7 +285,7 @@
       </div>
     </div>
   </section>
-
+<!-- 
   <section id='testimonials' class='p-section'>
     <div class='container'>
       <sup>Testimonials</sup>
@@ -408,7 +410,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <section id='contact' class='p-section-lg bg-dark text-white'>
     <div class='container container-lg text-center'>
