--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
               
             </div>
             <div class='card-footer'>
-              <a href='#' class='btn btn-sm btn-light'><i class="bi-github"></i> Code</a>
+              <a href='https://github.com/matthewgoodbar/friend.ly' target="_blank" class='btn btn-sm btn-light'><i class="bi-github"></i> Code</a>
               <!-- <a href='#' class='btn btn-sm btn-light'><i class="bi-power"></i> Demo</a> -->
-              <a href='https://friend-ly.onrender.com/login'target="_blank" class='btn btn-sm btn-primary float-end'><i class="bi-play-fill"></i> Demo</a>
+              <a href='https://friend-ly.onrender.com/login' target="_blank" class='btn btn-sm btn-primary float-end'><i class="bi-play-fill"></i> Demo</a>
             </div>
           </div>
         </div>
@@ -116,7 +116,7 @@
 
             </div>
             <div class='card-footer'>
-              <a href='https://github.com/iamxiwang/greenfin' class='btn btn-sm btn-light'><i class="bi-github"></i> Code</a>
+              <a href='https://github.com/iamxiwang/greenfin' target="_blank" class='btn btn-sm btn-light'><i class="bi-github"></i> Code</a>
               <!-- <a href='#' class='btn btn-sm btn-light'><i class="bi-power"></i> Demo</a> -->
               <a href='https://greenfin.onrender.com/' target="_blank" class='btn btn-sm btn-primary float-end'><i class="bi-play-fill"></i> Demo</a>
             </div>
@@ -135,7 +135,7 @@
 
             </div>
             <div class='card-footer'>
-              <a href='https://github.com/iamxiwang/life_expectancy' class='btn btn-sm btn-light'><i class="bi-github"></i> Code</a>
+              <a href='https://github.com/iamxiwang/life_expectancy' target="_blank" class='btn btn-sm btn-light'><i class="bi-github"></i> Code</a>
               <!-- <a href='#' class='btn btn-sm btn-light'><i class="bi-power"></i> Demo</a> -->
               <a href='https://iamxiwang.com/life_expectancy/' target="_blank"
               " class='btn btn-sm btn-primary float-end'><i class="bi-play-fill"></i> Demo</a>
