changed description of me

--- a/index.html
+++ b/index.html
@@ -257,12 +257,12 @@
           </div>
         </div>
         <div class='col-sm-8'>
-          <blockquote>Actively writing code and building high-functioning teams.</blockquote>
+          <blockquote>Actively writing code and dancing ballet.</blockquote>
 
           <img src="img/github_activities.png" class='mb-3'>
 
-          <p class='lead'>Thought-filled software engineer and entrepreneur who understands that deliberate, <span class='marker-highlight'>consistent progress</span> over time is life's greatest growth strategy.</p>
-          <p class='lead'>Regardless of his job titles, Morgan sees leadership as a choice, not a rank. He strives to make that choice daily and challenges others to do the same. Currently serving as CTO at <span class='marker-highlight'>Fast Company's World Most Innovative Company</span> (x4), consulting startup founders, and Launching Book ("Code School") to help more people transition into tech.</p>
+          <p class='lead'>Thought-filled software engineer and dancer who understands that deliberate, <span class='marker-highlight'>consistent progress</span> over time is life's greatest growth strategy.</p>
+          <p class='lead'>Vivian views learning new skills as a personal choice rather than a measure of her status, irrespective of her job titles. She makes a conscious effort to pursue that choice every day and encourages others to do the same.  Currently working on detective secrets at <span class='marker-highlight'>Open source</span></p>
           
           <p class='lead mb-0'>Favorite Tools:</p>
 
