changed first paragraph small description

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class='col-md-6 offset-md-3'>
           <sup>Meet Xi Vivian Wang</sup>
           <h1>Combining <span class='marker-highlight'>technology</span> and creative <span class='marker-highlight'>problem-solving</span> to positively impact others.</h1>
-          <p class='lead mb-5'>I use technology to connect people and help others reach their full potential.</p>
+          <p class='lead mb-5'>With a unique background in executive assistance.</p>
 
           <a target='_blank' href='https://www.linkedin.com/in/xi-vivian-wang-7b00bb25a' class='btn btn-primary'><i class="bi-linkedin"></i> Connect on Linkedin</a>
           <!-- <a  target='_blank' href='https://calendly.com/morganjlopes/call' class='btn btn-primary'><i class="bi-calendar-event"></i> Schedule a Call</a> -->
@@ -262,16 +262,15 @@
           <img src="img/github_activities.png" class='mb-3'>
 
           <p class='lead'>Thought-filled software engineer and dancer who understands that deliberate, <span class='marker-highlight'>consistent progress</span> over time is life's greatest growth strategy.</p>
-          <p class='lead'>Vivian views learning new skills as a personal choice rather than a measure of her status, irrespective of her job titles. She makes a conscious effort to pursue that choice every day and encourages others to do the same.  Currently working on detective secrets at <span class='marker-highlight'>Open source</span></p>
+          <p class='lead'>Vivian views learning new skills as a personal choice rather than a measure of her status, irrespective of her job titles. She makes a conscious effort to pursue that choice every day and encourages others to do the same.  Currently working on <span class='marker-highlight'>detective secrets at Open source</span></p>
           
           <p class='lead mb-0'>Favorite Tools:</p>
 
           <ul class='lead'>
             <li><span class='marker-highlight'>Ruby on Rails</span></li>
             <li><span class='marker-highlight'>React.js</span></li>
-            <li><span class='marker-highlight'>Python</span></li>
+            <li><span class='marker-highlight'>Javascript && Python</span></li>
             <li>Github</li>
-            <li>Render</li>
             <li>AWS</li>
           </ul>
 
