--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XCMEVB58TK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-XCMEVB58TK');
+  </script>
+
   <title>Xi Vivian Wang: Full Stack Engineer.</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
@@ -428,9 +438,10 @@
 
       <div class='mt-5'>
         <a target='_blank' href='https://www.linkedin.com/in/xi-vivian-wang-7b00bb25a/' class='btn btn-primary'><i class="bi-linkedin"></i> Connect on Linkedin</a>
+        
         <!-- <a  target='_blank' href='https://calendly.com/morganjlopes/call' class='btn btn-primary'><i class="bi-calendar-event"></i> Schedule a Call</a> -->
-        <!-- <a href='#' class='btn btn-primary'><i class="bi-download"></i> Download Resume</a> -->
-        <!-- <a href='mailto:' class='btn btn-primary'><i class="bi-envelope"></i> Send Email</a> -->
+        <!-- <a href='#' class='btn btn-primary'><i class="bi-download"></i> Download Resume</a>
+        <a href='mailto:' class='btn btn-primary'><i class="bi-envelope"></i> Send Email</a> -->
       </div>
     </div>
   </section>
