updated github activities

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
         <div class='col-sm-8'>
           <blockquote>Actively writing code and dancing ballet.</blockquote>
 
-          <img src="img/github_activities.png" class='mb-3'>
+          <img src="img/Screenshot 2023-04-19 at 3.30.54 PM.png" class='mb-3'>
 
           <p class='lead'>Thought-filled software engineer and dancer who understands that deliberate, <span class='marker-highlight'>consistent progress</span> over time is life's greatest growth strategy.</p>
           <p class='lead'>Vivian views learning new skills as a personal choice rather than a measure of her status, irrespective of her job titles. She makes a conscious effort to pursue that choice every day and encourages others to do the same.  Currently working on <span class='marker-highlight'>detective secrets at Open source</span></p>
@@ -272,6 +272,8 @@
             <li><span class='marker-highlight'>Javascript && Python</span></li>
             <li>Github</li>
             <li>AWS</li>
+            <li>Midjourney</li>
+            <li>OpenAI</li>
           </ul>
 
           <div class='mt-5'>
