updated project photo

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
         <div class='col-sm-4'>
           <div class='card h-100'>
-            <div class='background-image' style='background-image: url(img/greenfin.png)'>
+            <div class='background-image' style='background-image: url(img/green_phone_view.png)'>
               <img src='img/spacer-portrait.png'>
             </div>
             <div class='card-body'>
@@ -125,7 +125,7 @@
 
         <div class='col-sm-4'>
           <div class='card h-100'>
-            <div class='background-image' style='background-image: url(img/life1.png)'>
+            <div class='background-image' style='background-image: url(img/life_phone_view.png)'>
               <img src='img/spacer-portrait.png'>
             </div>
             <div class='card-body'>
