added technologies to project

--- a/index.html
+++ b/index.html
@@ -93,6 +93,21 @@
 
               <h3>Friend.ly</h3>
               <p class='mb-3'>A social media website for meeting new people based on user location and interest.</p>
+              <div class="technology">
+                <div ID="API">RESTful APIs</div>
+                <div id="html">HTML5</div>
+                <div id='css'>CSS3</div>
+                <div id="Ruby">Ruby</div>
+                <div id="Rails">Ruby on Rails</div>
+                <div id="Express">Express.js</div>
+                <div id="MongoDB">Mongo DB</div>
+                <div id="React">React</div>
+                <div id="Redux">Redux</div>
+                <div id="Javascript">JavaScript</div>
+                <div id="design">Responsive Design</div>
+                <div id="AWS">AWS</div>
+                <div id="Node">Node.js</div>
+              </div>
               
             </div>
             <div class='card-footer'>
@@ -112,6 +127,18 @@
 
               <h3>Greenfin</h3>
               <p class='mb-3'>A single page Redfin.com clone where user can buy and sell their properties.</p>
+              <div class="technology">
+                <div id="html">HTML5</div>
+                <div id='css'>CSS3</div>
+                <div id="Ruby">Ruby</div>
+                <div id="Rails">Ruby on Rails</div>
+                <div id="Node">PostgreSql</div>
+                <div id="React">React</div>
+                <div id="Redux">Redux</div>
+                <div id="Javascript">Javascript</div>
+                <div id="AWS">AWS</div>
+                <div id="design">Responsive Design</div>
+              </div>
               
 
             </div>
@@ -132,7 +159,14 @@
 
               <h3>Life Expectancy</h3>
               <p class='mb-3'>A minimalist map to visualize countries' life expectancy at birth.</p>
-
+              <div class="technology">
+                <div id="html">HTML5</div>
+                <div id='css'>CSS3</div>
+                <div id="google">Google Chart API</div>
+                <div id='data'>Data Visualization</div>
+                <div id="Javascript">Javascript</div>
+                <div id="design">Responsive Design</div>
+              </div>
             </div>
             <div class='card-footer'>
               <a href='https://github.com/iamxiwang/life_expectancy' target="_blank" class='btn btn-sm btn-light'><i class="bi-github"></i> Code</a>
