added tesing/jest in technology in my project

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
               <h3>Greenfin</h3>
               <p class='mb-3'>A single page Redfin.com clone where user can buy and sell their properties.</p>
               <div class="technology">
-                <div id="html">HTML5</div>
-                <div id='css'>CSS3</div>
+                <div id="html">HTML5/CSS3</div>
+                <div id='css'>TESING/JEST</div>
                 <div id="Ruby">Ruby</div>
                 <div id="Rails">Ruby on Rails</div>
                 <div id="Node">PostgreSql</div>
