changed headshot photos

--- a/index.html
+++ b/index.html
@@ -259,7 +259,8 @@
       <div class='row flex-row'>
         <div class='col-sm-4'>
           <div class='p-3 sticky-top' style='top: 85px;'>
-            <img src="img/headshot.jpeg" class='circle mb-3'>
+            <img src="img/secretary.png" class='circle mb-3'>
+            <img src="img/sales.jpeg" class='circle mb-3'>
 
             <ul class='list-inline mb-0 text-center'>
               <li class='list-inline-item h4 mb-0 me-3'>
@@ -296,7 +297,7 @@
           <img src="img/Screenshot 2023-04-19 at 3.30.54 PM.png" class='mb-3'>
 
           <p class='lead'>Thought-filled software engineer and dancer who understands that deliberate, <span class='marker-highlight'>consistent progress</span> over time is life's greatest growth strategy.</p>
-          <p class='lead'>Vivian views learning new skills as a personal choice rather than a measure of her status, irrespective of her job titles. She makes a conscious effort to pursue that choice every day and encourages others to do the same.  Currently working on <span class='marker-highlight'>detective secrets at Open source</span></p>
+          <p class='lead'>Vivian views learning new skills as a personal choice rather than a measure of her status, irrespective of her job titles. She makes a conscious effort to pursue that choice every day and encourages others to do the same.  Currently working on <span class='marker-highlight'>Learning AWS</span></p>
           
           <p class='lead mb-0'>Favorite Tools:</p>
 
@@ -306,8 +307,7 @@
             <li><span class='marker-highlight'>Javascript && Python</span></li>
             <li>Github</li>
             <li>AWS</li>
-            <li>Midjourney</li>
-            <li>OpenAI</li>
+          
           </ul>
 
           <div class='mt-5'>
