--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
 
       <div class='row justify-content-center d-flex align-items-center'>
         <div class='col-2'>
+          <img src="img/unikon_solutions_logo.jpeg" class='px-3'>
+        </div>
+        <div class='col-2'>
           <img src="img/dangdang.png" class='px-3'>
         </div>
         <div class='col-2'>
           <img src="img/airmedia.png" class='px-3'>
         </div>
-        <!-- <div class='col-2'>
-          <img src="img/nuskin.png" class='px-3'>
-        </div> -->
       </div>
     </div>
   </section>
