--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class='col-md-6 offset-md-3'>
           <sup>Meet Xi Vivian Wang</sup>
           <h1>Combining <span class='marker-highlight'>technology</span> and creative <span class='marker-highlight'>problem-solving</span> to positively impact others.</h1>
-          <p class='lead mb-5'>With a unique background in executive assistance.</p>
+          <p class='lead mb-5'>With a unique background in Executive Assistant &Sales Specialist.</p>
 
           <a target='_blank' href='https://www.linkedin.com/in/xi-vivian-wang-7b00bb25a' class='btn btn-primary'><i class="bi-linkedin"></i> Connect on Linkedin</a>
           <!-- <a  target='_blank' href='https://calendly.com/morganjlopes/call' class='btn btn-primary'><i class="bi-calendar-event"></i> Schedule a Call</a> -->
